Fix layout issue on sounds index page
Sound partials were not centered in the page

--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -46,4 +46,5 @@ a {
   border-radius: 100%;
   background-color: #B40404;
   padding: 5px;
+  cursor: pointer;
 }
